javadocs and minor changes